Realizando mais algumas configurações no projeto

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 SECRET_KEY=django-insecure-0@i$d9c4s9r9-3l^%0(&2l75@wsc5hoba50-0&si*9y1&!zyyu
 DEBUG=TRUE
 ALLOWED_HOSTS=*
+DB_NAME=ProjectPallet
+DB_USER=root
+DB_PASSWORD=root
+DB_HOST=localhost
+DB_PORT=3306
